--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.idea/*
+local.properties
+*.iml
+version.properties
+*.gradle
+.gradle/*
 
 ### Eclipse ###
 .apt_generated
